--- a/views/hello.jade
+++ b/views/hello.jade
@@ -10,10 +10,9 @@ block content
     var socket = io.connect('http://localhost');
     socket.on('news', function(data){
       console.log(data);
-      socket.emit('my other event', {my: 'data'});
     })
     $(function(){
       $('#btn').click(function(){
-        socket.emit('add note', {note: $('textarea').val()});
+        socket.emit('add note', {message: $('textarea').val()});
       });
     })
