--- a/public/stylus/stylesheets/style.styl
+++ b/public/stylus/stylesheets/style.styl
@@ -1,9 +1,22 @@
 @import 'nib'
 global-reset()
+@import 'skeleton'
+
+html
+  font 10px "Lucida Grande", Helvetica, Arial, sans-serif
 
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font-size 2.3rem
 
 a
   color: #00B7FF
+
+.dashboard
+  max-width 40rem
+  margin 2rem auto
+
+.box
+  height 40rem
+  background red
+  margin-bottom 1rem
+  padding .5rem
