Add daily tracking view

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,8 +2,4 @@ extends layout
 
 block content
   .dashboard
-    .row
-      .box.sixteen.columns#transit
-        h2 Transit
-      .box.sixteen.columns#weather
-        h2 Weather
+    h1 Welcome to Your Dashboard
