--- a/public/stylus/stylesheets/style.styl
+++ b/public/stylus/stylesheets/style.styl
@@ -2,21 +2,79 @@
 global-reset()
 @import 'skeleton'
 
+// Variables
+serif-font = 'Merriweather', serif
+sans-font = 'Merriweather Sans', sans-serif
+dark-blue = #2c3e50
+mid-blue = #2980b9
+light-blue = #3498db
+mid-gray = #95a5a6
+light-gray = #ecf0f1
+
+// Styles
 html
-  font 10px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 10px serif-font
 
 body
   font-size 2.3rem
+  color dark-blue
+  background light-gray
 
 a
-  color: #00B7FF
+  color light-blue
 
-.dashboard
-  max-width 40rem
+h1
+  font-size 6rem
+  font-family sans-font
+  font-weight 800
+
+.tracker
+  max-width 60rem
   margin 2rem auto
+  .row
+    margin-bottom 3.5rem
+  h1
+    margin-bottom 3rem
+    text-align right
+  label
+    border-bottom 1px solid light-blue
+    display block
+    margin-bottom 2.3rem
+    padding-bottom .5rem
+  textarea
+    background light-gray
+    border none
+    font-family serif-font
+    font-size 2rem
+    line-height 1.3
+    min-height 20rem
+    outline 0px none transparent
+  textarea, input
+    width 100%
+    margin 0
+  input[type="range"]
+    font-size 2rem
+    &:before
+      content attr(min)
+    &:after
+      content attr(max)
+
+input[type="submit"]
+  background dark-blue
+  color light-gray
+  font-family sans-font
+  font-size 2.4rem
+  padding 1rem
 
 .box
   height 40rem
   background red
   margin-bottom 1rem
   padding .5rem
+
+@media screen and (max-width: 600px)
+  .dashboard
+    margin auto
+    width 100%
+  textarea, input
+    padding 0
